apps/production/test-site/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: test-website
  labels:
    app: test-website
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: test-website
