apps/production/test-site/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-website
spec:
  rules:
    - host: test-site.scottsmith.me.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-website
                port:
                  number: 80
